--- a/news.html
+++ b/news.html
@@ -20,6 +20,7 @@
 <link rel="stylesheet" href="css/min-style.css">
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
   <!-- <link rel="stylesheet" type="text/css" href="css/slick.css"/>
 <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/> -->
 <link rel="shortcut icon" 
@@ -59,49 +60,6 @@
 	  }
 	}
 	</script>
-	
-<!-- <meta name="google-site-verification" content="tj5-IRx0plSc-pKJrosM3LMwcN1rGrdcr0maVo3xJk0" /> -->
-<!-- Global site tag (gtag.js) - Google Ads: 780358687 -->
-
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-780358687"></script> -->
-
-<!-- <script>
-  
-window.dataLayer = window.dataLayer || [];
-  
-function gtag(){dataLayer.push(arguments);}
-  
-gtag('js', new Date());
-
-  
-gtag('config', 'AW-780358687');
-
-</script> -->
-
-
-
-<!-- Event snippet for Aequos-con conversion page -->
-<!-- <script>
-  gtag('event', 'conversion', {
-      'send_to': 'AW-780358687/6R2wCJ6r748BEJ-ojfQC',
-      'value': 1.0,
-      'currency': 'USD'
-  });
-</script> -->
-<!-- <script>
-(function(i,s,o,g,r,a,m){
-  i['GoogleAnalyticsObject']=r;
-  i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},
-  i[r].l=1*new Date();
-  a=s.createElement(o),m=s.getElementsByTagName(o)[0];
-  a.async=1;
-  a.src=g;
-  m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-129560928-1', 'auto');
-ga('send', 'pageview'); -->
-<!-- </script> -->
 </head>
 <body>
 	<header class="header">
@@ -123,8 +81,8 @@ ga('send', 'pageview'); -->
 		</div>	
 		<div class="hamburgerCont">
 			<div class="hamburger_bg">
-				<img alt="hamburger menu to open menu" role="button" aria-label="Open menu" class="hamburger" onclick="menuSwitch()" src="images/hamburger.png">
-				<img alt="hamburger menu to close menu" role="button" aria-label="Close menu" class="hamburgerBlack" onclick="menuSwitch()" src="images/hamburger_black.png">
+				<img alt="hamburger menu to open menu" role="button" aria-label="Open menu" class="lozad hamburger" onclick="menuSwitch()" src="images/hamburger.png">
+				<img alt="hamburger menu to close menu" role="button" aria-label="Close menu" class="hamburgerBlack lozad" onclick="menuSwitch()" src="images/hamburger_black.png">
 			</div>
 		</div>
 	</header>
@@ -132,14 +90,14 @@ ga('send', 'pageview'); -->
 
 	<main class="flex-container" role="main">
 		<section id="newsHome_section">
-			<img class="shape shapeServiceHome" src="images/peachshape.gif" alt="white background abstract shape">
+			<img class="shape shapeServiceHome lozad" src="images/peachshape.gif" alt="white background abstract shape">
 			<div class="main_heading newsHead">
 				<h2>AEQUOS</h2>
 				<h1>NEWS</h1>
 				<h3>OUR VIEW</h3>
 			</div>
 			<div class="TFMlogo_heading newsLogo">
-					<img alt="TFM Group Logo" class="TFMLogo" src="images/TFMblacklogo.png">
+					<img alt="TFM Group Logo" class="TFMLogo lozad" src="images/TFMblacklogo.png">
 			</div>
 			<div class="cookie-law">
 					<p>This website uses cookies to improve your experience. You can opt-out if you wish.</p>
@@ -150,11 +108,11 @@ ga('send', 'pageview'); -->
 		</section>
 
 		<div class="chat newschat">
-			<img alt="Lets chat bubble above chat icon" class="chattext" onclick="openChat()" src="images/chattext.png">
-			<img alt="chat bubble to open chat window and start chatting with Aequos" class="chatbubble" onclick="openChat()" src="images/blackchatbubble.png">
-			<img alt="X that closes the text inviting to chat above chatbubble image" class="closeChat" src="images/closeChat.png">
+			<img alt="Lets chat bubble above chat icon" class="lozad chattext" onclick="openChat()" src="images/chattext.png">
+			<img alt="chat bubble to open chat window and start chatting with Aequos" class="lozad chatbubble" onclick="openChat()" src="images/blackchatbubble.png">
+			<img alt="X that closes the text inviting to chat above chatbubble image" class="lozad closeChat" src="images/closeChat.png">
 	</div>
-		<iframe title="Aequos chatbot" class="bot" src="https://snatchbot.me/webchat/?botID=55830&appID=GbE9uekoYZJoUSEjN0ac"></iframe>
+		<iframe title="Aequos chatbot" class="bot lozad" src="https://snatchbot.me/webchat/?botID=55830&appID=GbE9uekoYZJoUSEjN0ac"></iframe>
 		<p aria-label="Close chat" role="button" class="close" onclick="closeChatX()"> X</p>
 
 		<section class="news">
@@ -164,8 +122,8 @@ ga('send', 'pageview'); -->
 					<div class="blogPosts">
 						<div class="profile">
 							<h3>Andy Weedon</h3>
-							<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" class="linkedinBlack" src="images/social/black/linkedin.png" ></a>
-							<img alt="Andy Weedon profile picture" class="profileImg" src="images/Andy.jpg">
+							<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" class="lozad linkedinBlack" src="images/social/black/linkedin.png" ></a>
+							<img alt="Andy Weedon profile picture" class="lozad profileImg" src="images/Andy.jpg">
 						</div>
 						<div class="blogContent">
 							<h3>LET'S GET GOING</h3>
@@ -186,7 +144,7 @@ ga('send', 'pageview'); -->
 					<div class="blogPosts">
 						<div class="profile">
 								<h3>Andy Weedon</h3>
-								<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" class="linkedinBlack" src="images/social/black/linkedin.png" ></a>
+								<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" class="lozad linkedinBlack" src="images/social/black/linkedin.png" ></a>
 								<!-- <img alt="jack profile picture" class="profileImg" src="images/Andy.jpg"> -->
 						</div>
 						<div class="blogContent">
@@ -205,7 +163,7 @@ ga('send', 'pageview'); -->
 					<div class="blogPosts">
 						<div class="profile">
 								<h3>Andy Weedon</h3>
-								<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" class="linkedinBlack" src="images/social/black/linkedin.png" ></a>
+								<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" class="lozad linkedinBlack" src="images/social/black/linkedin.png" ></a>
 								<!-- <img alt="Bobby profile picture" class="profileImg" src="images/Andy.jpg"> -->
 						</div>
 						<div class="blogContent">
@@ -242,11 +200,11 @@ ga('send', 'pageview'); -->
 			<div>
 				<h2>A FEW OF THE PARTNERS WE WORK WITH </h2>
 				<div class="clientLogos">
-					<img alt="Oxfam logo" id="oxfamLogo" src="images/oxfamLogo.png">
-					<img alt="Motorpoint logo"  id="motorLogo" src="images/motorLogo.png">
-					<img alt="Abbeyfield logo"  id="abbeyLogo" src="images/abbeyLogo.png">
-					<img alt="Safestore logo"  id="safestoreLogo" src="images/safestoreLogo.png">
-					<img alt="Pizzahut logo"  id="pizzahutLogo" src="images/pizzalogo.png">
+					<img class="lozad" alt="Oxfam logo" id="oxfamLogo" src="images/oxfamLogo.png">
+					<img class="lozad" alt="Motorpoint logo"  id="motorLogo" src="images/motorLogo.png">
+					<img class="lozad" alt="Abbeyfield logo"  id="abbeyLogo" src="images/abbeyLogo.png">
+					<img class="lozad" alt="Safestore logo"  id="safestoreLogo" src="images/safestoreLogo.png">
+					<img class="lozad" alt="Pizzahut logo"  id="pizzahutLogo" src="images/pizzalogo.png">
 				</div>
 				
 			</div>
@@ -266,7 +224,7 @@ ga('send', 'pageview'); -->
 										The Future Works,
 										2 Brunel Way, Slough, Berkshire,
 										SL1 1FQ</p>
-										<img class="small_qualif" src="images/Cyber_Essentials_Badge_High_Res.png" alt="Cyber Essentials Badge" title="Cyber_Essentials_Badge"/>
+										<img class="lozad small_qualif" src="images/Cyber_Essentials_Badge_High_Res.png" alt="Cyber Essentials Badge" title="Cyber_Essentials_Badge"/>
 									</div>
 									<div class="cInfoSection emails">
 										<h3>CALL US AT</h3>
@@ -282,8 +240,8 @@ ga('send', 'pageview'); -->
 									</div>
 									<div class="cInfoSection social">
 										<h3>SOCIAL</h3>
-											<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" class="linkedinBlack" src="images/social/black/linkedin.png" ></a>
-											<a rel="noopener" href="https://twitter.com/Aequossdwan" target="_blank"><img alt="Aequos SD-WAN Twitter" id="twitterBlack" src="images/social/black/twitter.png"></a>
+											<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" class="lozad linkedinBlack" src="images/social/black/linkedin.png" ></a>
+											<a rel="noopener" href="https://twitter.com/Aequossdwan" target="_blank"><img alt="Aequos SD-WAN Twitter" class="lozad" id="twitterBlack" src="images/social/black/twitter.png"></a>
 									</div>
 			</div>
 		</section>
