--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -20,7 +20,7 @@
 <link rel="stylesheet" href="css/min-style.css">
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
 <link rel="shortcut icon" 
       type="image/x-icon" 
 			href="favicon.ico"> 
@@ -79,8 +79,8 @@
 		</div>	
 		<div class="hamburgerCont">
 			<div class="hamburger_bg">
-				<img alt="hamburger menu to open menu" role="button" aria-label="Open menu" class="hamburger" onclick="menuSwitch()" src="images/hamburger.png">
-				<img alt="hamburger menu to close menu" role="button" aria-label="Close menu" class="hamburgerBlack" onclick="menuSwitch()" src="images/hamburger_black.png">
+				<img alt="hamburger menu to open menu" role="button" aria-label="Open menu" class="lozad hamburger" onclick="menuSwitch()" src="images/hamburger.png">
+				<img alt="hamburger menu to close menu" role="button" aria-label="Close menu" class="hamburgerBlack lozad" onclick="menuSwitch()" src="images/hamburger_black.png">
 			</div>
 		</div>
 	</header>
@@ -88,22 +88,22 @@
 
 	<main class="flex-container" role="main">
 		<section id="termsSection">
-			<img class="shape termsShape" src="images/shapeBlueAbout.gif" alt="blue background abstract shape">
+			<img class="shape termsShape lozad" src="images/shapeBlueAbout.gif" alt="blue background abstract shape">
 			<div class="main_heading termsHead">
 				<h2>AEQUOS</h2>
 				<h1>PRIVACY POLICY</h1>
 			</div>
 			<div class="TFMlogo_heading">
-					<img alt="TFM Group Logo" class="TFMLogo" src="images/TFMlogo.png">
+					<img alt="TFM Group Logo" class="TFMLogo lozad" src="images/TFMlogo.png">
 			</div>
 
 		</section>
 		<div class="chat">
-			<img alt="Lets chat bubble above chat icon" class="chattext" onclick="openChat()" src="images/chattext.png">
-			<img alt="chat bubble to open chat window and start chatting with Aequos" class="chatbubble" onclick="openChat()" src="images/chatbubble.png">
-			<img alt="X that closes the text inviting to chat above chatbubble image" class="closeChat" src="images/closeChat.png">
+			<img alt="Lets chat bubble above chat icon" class="chattext lozad" onclick="openChat()" src="images/chattext.png">
+			<img alt="chat bubble to open chat window and start chatting with Aequos" class="chatbubble lozad" onclick="openChat()" src="images/chatbubble.png">
+			<img alt="X that closes the text inviting to chat above chatbubble image" class="closeChat lozad" src="images/closeChat.png">
 	</div>
-		<iframe title="Aequos chatbot" class="bot" src="https://snatchbot.me/webchat/?botID=55830&appID=GbE9uekoYZJoUSEjN0ac"></iframe>
+		<iframe title="Aequos chatbot" class="bot lozad" src="https://snatchbot.me/webchat/?botID=55830&appID=GbE9uekoYZJoUSEjN0ac"></iframe>
 		<p aria-label="Close chat" role="button" class="close" onclick="closeChatX()"> X</p>
 	
 	<section class="policy">
