--- a/sd-wan.html
+++ b/sd-wan.html
@@ -13,13 +13,14 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="black">
 <meta name="description" content="SD-WAN, that is, software-defined wide area networking improves on the existing networking solutions by utilising the cloud and tested networking solutions such as..." />
 <title>AEQUOS - SD-WAN </title>
 <!-- <link rel="stylesheet" href="css/style.css"> -->
 <link rel="stylesheet" href="css/min-style.css">
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
 <link rel="shortcut icon" 
       type="image/x-icon" 
 			href="favicon.ico"> 
@@ -79,8 +80,8 @@
 		</div>	
 		<div class="hamburgerCont">
 			<div class="hamburger_bg">
-				<img alt="hamburger menu to open menu" role="button" aria-label="Open menu" class="hamburger" onclick="menuSwitch()" src="images/hamburger.png">
-				<img alt="hamburger menu to close menu" role="button" aria-label="Close menu" class="hamburgerBlack" onclick="menuSwitch()" src="images/hamburger_black.png">
+				<img alt="hamburger menu to open menu" role="button" aria-label="Open menu" class="hamburger lozad" onclick="menuSwitch()" src="images/hamburger.png">
+				<img alt="hamburger menu to close menu" role="button" aria-label="Close menu" class="hamburgerBlack lozad" onclick="menuSwitch()" src="images/hamburger_black.png">
 			</div>
 		</div>
 	</header>
@@ -88,14 +89,14 @@
 
 	<main class="flex-container" role="main">
 		<section id="SDhome_section">
-			<img class="shape" src="images/shapeBlackSD.gif" alt="blue background abstract shape">
+			<img class="shape lozad" src="images/shapeBlackSD.gif" alt="blue background abstract shape">
 			<div class="main_heading sdMain">
 				<h2>AEQUOS</h2>
 				<h1>SD-WAN</h1>
 				<h3>The driver of digital transformation that combines the benefits of secure networking solutions and the cloud.</h3>
 			</div>
 			<div class="TFMlogo_heading">
-					<img alt="TFM Group Logo" class="TFMLogo" src="images/TFMlogo.png">
+					<img alt="TFM Group Logo" class="TFMLogo lozad" src="images/TFMlogo.png">
 			</div>
 			<div class="cookie-law">
 					<p>This website uses cookies to improve your experience. You can opt-out if you wish.</p>
@@ -106,21 +107,21 @@
 
 		<div id="heading_bottom">
 			<p><a href="#SDwanMain">SEE MORE</a></p>
-			<a href="#SDwanMain"><img role="button" aria-label="Scroll down to next section" alt="down arrow" id="dropDown" src="images/dropD.png"></a>
+			<a href="#SDwanMain"><img class="lozad" role="button" aria-label="Scroll down to next section" alt="down arrow" id="dropDown" src="images/dropD.png"></a>
 
 		</div>
 		<div class="chat">
-			<img alt="Lets chat bubble above chat icon" class="chattext" onclick="openChat()" src="images/chattext.png">
-			<img alt="chat bubble to open chat window and start chatting with Aequos" class="chatbubble" onclick="openChat()" src="images/chatbubble.png">
-			<img alt="X that closes the text inviting to chat above chatbubble image" class="closeChat" src="images/closeChat.png">
+			<img alt="Lets chat bubble above chat icon" class="chattext lozad" onclick="openChat()" src="images/chattext.png">
+			<img alt="chat bubble to open chat window and start chatting with Aequos" class="chatbubble lozad" onclick="openChat()" src="images/chatbubble.png">
+			<img alt="X that closes the text inviting to chat above chatbubble image" class="closeChat lozad" src="images/closeChat.png">
 	</div>
-		<iframe title="Aequos chatbot" class="bot" src="https://snatchbot.me/webchat/?botID=55830&appID=GbE9uekoYZJoUSEjN0ac"></iframe>
+		<iframe title="Aequos chatbot" class="bot lozad" src="https://snatchbot.me/webchat/?botID=55830&appID=GbE9uekoYZJoUSEjN0ac"></iframe>
 		<p aria-label="Close chat" role="button" class="close" onclick="closeChatX()"> X</p>
 
 		<section id="SDwanMain">
 			<div aria-hidden="true" class="blackTriangleSD"></div>
-			<img class="sdImg" src="images/SDbenefits.png" alt="The benefits of SD-wan include: greater agility, increased performanc, advanced control, robust security, third party extension, cloud-first">
-			<img class="sdImgLarge" src="images/SDbenefitslarge.png" alt="The benefits of SD-wan include: greater agility, increased performanc, advanced control, robust security, third party extension, cloud-first">
+			<img class="sdImg lozad" src="images/SDbenefits.png" alt="The benefits of SD-wan include: greater agility, increased performanc, advanced control, robust security, third party extension, cloud-first">
+			<img class="sdImgLarge lozad" src="images/SDbenefitslarge.png" alt="The benefits of SD-wan include: greater agility, increased performanc, advanced control, robust security, third party extension, cloud-first">
 		</section>
 
 		<section class="SDeasy">
@@ -274,15 +275,15 @@
 							</div>
 						
 						<div class="navReasons">
-							<button aria-label="reveals contents from right to left in descending order" class="toLeftArr"><img alt="Left arrow" id="SDarrowL" class="sectorsNavi leftArrow" src="images/leftwhite.png"></button>
-							<img alt="blue dot refers to a benefit to using SD-WAN visible" class="sectorsNavi blueDot" src="images/bluedot.png">
-							<img alt="white dot refers to a benefit to using SD-WAN hidden" class="sectorsNavi whiteDot" src="images/whitedot.png">
-							<img alt="white dot refers to a benefit to using SD-WAN hidden" class="sectorsNavi whiteDot" src="images/whitedot.png">
-							<img alt="white dot refers to a benefit to using SD-WAN hidden" class="sectorsNavi whiteDot" src="images/whitedot.png">
-							<img alt="white dot refers to a benefit to using SD-WAN hidden" class="sectorsNavi whiteDot" src="images/whitedot.png">
-							<img alt="white dot refers to a benefit to using SD-WAN hidden" class="sectorsNavi whiteDot" src="images/whitedot.png">
-							<img alt="white dot refers to a benefit to using SD-WAN hidden" class="sectorsNavi whiteDot" src="images/whitedot.png">
-							<button aria-label="reveals contents from left to right in ascending order" class="toRightArr"><img alt="Right arrow" id="SDarrowR" class="sectorsNavi rightArrow" src="images/rightwhite.png"></button>
+							<button aria-label="reveals contents from right to left in descending order" class="toLeftArr"><img alt="Left arrow" id="SDarrowL" class="lozad sectorsNavi leftArrow" src="images/leftwhite.png"></button>
+							<img alt="blue dot refers to a benefit to using SD-WAN visible" class="lozad sectorsNavi blueDot" src="images/bluedot.png">
+							<img alt="white dot refers to a benefit to using SD-WAN hidden" class="lozad sectorsNavi whiteDot" src="images/whitedot.png">
+							<img alt="white dot refers to a benefit to using SD-WAN hidden" class="lozad sectorsNavi whiteDot" src="images/whitedot.png">
+							<img alt="white dot refers to a benefit to using SD-WAN hidden" class="lozad sectorsNavi whiteDot" src="images/whitedot.png">
+							<img alt="white dot refers to a benefit to using SD-WAN hidden" class="lozad sectorsNavi whiteDot" src="images/whitedot.png">
+							<img alt="white dot refers to a benefit to using SD-WAN hidden" class="lozad sectorsNavi whiteDot" src="images/whitedot.png">
+							<img alt="white dot refers to a benefit to using SD-WAN hidden" class="lozad sectorsNavi whiteDot" src="images/whitedot.png">
+							<button aria-label="reveals contents from left to right in ascending order" class="toRightArr"><img alt="Right arrow" id="SDarrowR" class="lozad sectorsNavi rightArrow" src="images/rightwhite.png"></button>
 							<!-- <button><i class="fas fa-chevron-right"></i></button> -->
 						</div>
 						<a href="about_us.html" class="discoverServices">MORE ABOUT US <i class='fas fa-angle-right'></i></a>
@@ -295,11 +296,11 @@
 			<div>
 				<h2>A FEW OF THE PARTNERS WE WORK WITH </h2>
 				<div class="clientLogos">
-					<img alt="Oxfam logo" id="oxfamLogo" src="images/oxfamLogo.png">
-					<img alt="Motorpoint logo"  id="motorLogo" src="images/motorLogo.png">
-					<img alt="Abbeyfield logo"  id="abbeyLogo" src="images/abbeyLogo.png">
-					<img alt="Safestore logo"  id="safestoreLogo" src="images/safestoreLogo.png">
-					<img alt="Pizzahut logo"  id="pizzahutLogo" src="images/pizzalogo.png">
+					<img class="lozad" alt="Oxfam logo" id="oxfamLogo" src="images/oxfamLogo.png">
+					<img class="lozad" alt="Motorpoint logo"  id="motorLogo" src="images/motorLogo.png">
+					<img class="lozad" alt="Abbeyfield logo"  id="abbeyLogo" src="images/abbeyLogo.png">
+					<img class="lozad" alt="Safestore logo"  id="safestoreLogo" src="images/safestoreLogo.png">
+					<img class="lozad" alt="Pizzahut logo"  id="pizzahutLogo" src="images/pizzalogo.png">
 				</div>
 				
 			</div>
@@ -319,7 +320,7 @@
 										The Future Works,
 										2 Brunel Way, Slough, Berkshire,
 										SL1 1FQ</p>
-						<img class="small_qualif" src="images/Cyber_Essentials_Badge_High_Res.png" alt="Cyber Essentials Badge" title="Cyber_Essentials_Badge"/>
+						<img class="lozad small_qualif" src="images/Cyber_Essentials_Badge_High_Res.png" alt="Cyber Essentials Badge" title="Cyber_Essentials_Badge"/>
 					</div>
 					<div class="cInfoSection emails">
 						<h3>CALL US AT</h3>
@@ -335,8 +336,8 @@
 					</div>
 					<div class="cInfoSection social">
 						<h3>SOCIAL</h3>
-							<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" id="linkedinBlack" src="images/social/black/linkedin.png" ></a>
-							<a rel="noopener" href="https://twitter.com/Aequossdwan" target="_blank"><img alt="Aequos SD-WAN Twitter" id="twitterBlack" src="images/social/black/twitter.png"></a>
+							<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img class="lozad" alt="Aequos SD-WAN LinkedIn" id="linkedinBlack" src="images/social/black/linkedin.png" ></a>
+							<a rel="noopener" href="https://twitter.com/Aequossdwan" target="_blank"><img alt="Aequos SD-WAN Twitter" class="lozad" id="twitterBlack" src="images/social/black/twitter.png"></a>
 					</div>
 				</div>
 		</section>
