--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -20,7 +20,7 @@
 <link rel="stylesheet" href="css/min-style.css">
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
 <link rel="shortcut icon" 
       type="image/x-icon" 
 			href="favicon.ico"> 
@@ -58,49 +58,7 @@
 	  }
 	}
 	</script>
-	
-<!-- <meta name="google-site-verification" content="tj5-IRx0plSc-pKJrosM3LMwcN1rGrdcr0maVo3xJk0" /> -->
-<!-- Global site tag (gtag.js) - Google Ads: 780358687 -->
 
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-780358687"></script> -->
-
-<!-- <script>
-  
-window.dataLayer = window.dataLayer || [];
-  
-function gtag(){dataLayer.push(arguments);}
-  
-gtag('js', new Date());
-
-  
-gtag('config', 'AW-780358687');
-
-</script> -->
-
-
-
-<!-- Event snippet for Aequos-con conversion page -->
-<!-- <script>
-  gtag('event', 'conversion', {
-      'send_to': 'AW-780358687/6R2wCJ6r748BEJ-ojfQC',
-      'value': 1.0,
-      'currency': 'USD'
-  });
-</script> -->
-<!-- <script>
-(function(i,s,o,g,r,a,m){
-  i['GoogleAnalyticsObject']=r;
-  i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},
-  i[r].l=1*new Date();
-  a=s.createElement(o),m=s.getElementsByTagName(o)[0];
-  a.async=1;
-  a.src=g;
-  m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-129560928-1', 'auto');
-ga('send', 'pageview'); -->
-<!-- </script> -->
 </head>
 <body>
 	<header class="header">
@@ -122,8 +80,8 @@ ga('send', 'pageview'); -->
 		</div>	
 		<div class="hamburgerCont">
 			<div class="hamburger_bg">
-				<img alt="hamburger menu to open menu" role="button" aria-label="Open menu" class="hamburger" onclick="menuSwitch()" src="images/hamburger.png">
-				<img alt="hamburger menu to close menu" role="button" aria-label="Close menu" class="hamburgerBlack" onclick="menuSwitch()" src="images/hamburger_black.png">
+				<img alt="hamburger menu to open menu" role="button" aria-label="Open menu" class="lozad hamburger" onclick="menuSwitch()" src="images/hamburger.png">
+				<img alt="hamburger menu to close menu" role="button" aria-label="Close menu" class="lozad hamburgerBlack" onclick="menuSwitch()" src="images/hamburger_black.png">
 			</div>
 		</div>
 	</header>
@@ -131,13 +89,13 @@ ga('send', 'pageview'); -->
 
 	<main class="flex-container" role="main">
 		<section id="termsSection">
-			<img class="shape termsShape" src="images/shapeBlueAbout.gif" alt="blue background abstract shape">
+			<img class="lozad shape termsShape" src="images/shapeBlueAbout.gif" alt="blue background abstract shape">
 			<div class="main_heading termsHead">
 				<h2>AEQUOS</h2>
 				<h1>TERMS OF USE</h1>
 			</div>
 			<div class="TFMlogo_heading">
-					<img alt="TFM Group Logo" class="TFMLogo" src="images/TFMlogo.png">
+					<img alt="TFM Group Logo" class="lozad TFMLogo" src="images/TFMlogo.png">
 			</div>
 			<div class="cookie-law">
 					<p>This website uses cookies to improve your experience. You can opt-out if you wish.</p>
@@ -148,11 +106,11 @@ ga('send', 'pageview'); -->
 		</section>
 	
 		<div class="chat">
-			<img alt="Lets chat bubble above chat icon" class="chattext" onclick="openChat()" src="images/chattext.png">
-			<img alt="chat bubble to open chat window and start chatting with Aequos" class="chatbubble" onclick="openChat()" src="images/chatbubble.png">
-			<img alt="X that closes the text inviting to chat above chatbubble image" class="closeChat" src="images/closeChat.png">
+			<img alt="Lets chat bubble above chat icon" class="lozad chattext" onclick="openChat()" src="images/chattext.png">
+			<img alt="chat bubble to open chat window and start chatting with Aequos" class="lozad chatbubble" onclick="openChat()" src="images/chatbubble.png">
+			<img alt="X that closes the text inviting to chat above chatbubble image" class="lozad closeChat" src="images/closeChat.png">
 	</div>
-		<iframe title="Aequos chatbot" class="bot" src="https://snatchbot.me/webchat/?botID=55830&appID=GbE9uekoYZJoUSEjN0ac"></iframe>
+		<iframe title="Aequos chatbot" class="bot lozad" src="https://snatchbot.me/webchat/?botID=55830&appID=GbE9uekoYZJoUSEjN0ac"></iframe>
 		<p aria-label="Close chat" role="button" class="close" onclick="closeChatX()"> X</p>
 		
 		<section id="terms_section">
