--- a/about_us.html
+++ b/about_us.html
@@ -18,6 +18,7 @@
 <title>AEQUOS - ABOUT US</title>
 <link rel="stylesheet" href="css/min-style.css">
 <!-- <link rel="stylesheet" href="css/style.css"> -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
@@ -58,49 +59,6 @@
 	  }
 	}
 	</script>
-	
-<!-- <meta name="google-site-verification" content="tj5-IRx0plSc-pKJrosM3LMwcN1rGrdcr0maVo3xJk0" /> -->
-<!-- Global site tag (gtag.js) - Google Ads: 780358687 -->
-
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-780358687"></script> -->
-
-<!-- <script>
-  
-window.dataLayer = window.dataLayer || [];
-  
-function gtag(){dataLayer.push(arguments);}
-  
-gtag('js', new Date());
-
-  
-gtag('config', 'AW-780358687');
-
-</script> -->
-
-
-
-<!-- Event snippet for Aequos-con conversion page -->
-<!-- <script>
-  gtag('event', 'conversion', {
-      'send_to': 'AW-780358687/6R2wCJ6r748BEJ-ojfQC',
-      'value': 1.0,
-      'currency': 'USD'
-  });
-</script> -->
-<!-- <script>
-(function(i,s,o,g,r,a,m){
-  i['GoogleAnalyticsObject']=r;
-  i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},
-  i[r].l=1*new Date();
-  a=s.createElement(o),m=s.getElementsByTagName(o)[0];
-  a.async=1;
-  a.src=g;
-  m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-129560928-1', 'auto');
-ga('send', 'pageview'); -->
-<!-- </script> -->
 </head>
 <body>
 	<header class="header">
@@ -122,8 +80,8 @@ ga('send', 'pageview'); -->
 		</div>	
 		<div class="hamburgerCont">
 			<div class="hamburger_bg">
-				<img alt="hamburger menu to open menu" role="button" aria-label="Open menu" class="hamburger" onclick="menuSwitch()" src="images/hamburger.png">
-				<img alt="hamburger menu to close menu" role="button" aria-label="Close menu" class="hamburgerBlack" onclick="menuSwitch()" src="images/hamburger_black.png">
+				<img alt="hamburger menu to open menu" role="button" aria-label="Open menu" class="lozad hamburger" onclick="menuSwitch()" src="images/hamburger.png">
+				<img alt="hamburger menu to close menu" role="button" aria-label="Close menu" class="hamburgerBlack lozad" onclick="menuSwitch()" src="images/hamburger_black.png">
 			</div>
 		</div>
 	</header>
@@ -131,13 +89,13 @@ ga('send', 'pageview'); -->
 
 	<main class="flex-container" role="main">
 		<section id="servicesHome_section">
-			<img class="shape shapeServiceHome" src="images/shapeBlueAbout.gif" alt="blue background abstract shape">
+			<img class="shape shapeServiceHome lozad" src="images/shapeBlueAbout.gif" alt="blue background abstract shape">
 			<div class="main_heading aboutMainH">
 				<h2>AEQUOS</h2>
 				<h1>ABOUT US</h1>
 			</div>
 			<div class="TFMlogo_heading">
-					<img alt="TFM Group Logo" class="TFMLogo" src="images/TFMlogo.png">
+					<img alt="TFM Group Logo" class="TFMLogo lozad" src="images/TFMlogo.png">
 			</div>
 			<div class="cookie-law">
 					<p>This website uses cookies to improve your experience. You can opt-out if you wish.</p>
@@ -148,15 +106,15 @@ ga('send', 'pageview'); -->
 		</section>
 		<div id="heading_bottom">
 			<p><a href="#aboutUsVideo">SEE MORE</a></p>
-			<a href="#aboutUsVideo"><img role="button" aria-label="Scroll down to next section" alt="down arrow" id="dropDown" src="images/dropD.png"></a>
+			<a href="#aboutUsVideo"><img role="button" aria-label="Scroll down to next section" alt="down arrow" id="dropDown" class="lozad" src="images/dropD.png"></a>
 
 		</div>
 		<div class="chat">
-			<img alt="Lets chat bubble above chat icon" class="chattext" onclick="openChat()" src="images/chattext.png">
-			<img alt="chat bubble to open chat window and start chatting with Aequos" class="chatbubble" onclick="openChat()" src="images/chatbubble.png">
-			<img alt="X that closes the text inviting to chat above chatbubble image" class="closeChat" src="images/closeChat.png">
+			<img alt="Lets chat bubble above chat icon" class="chattext lozad" onclick="openChat()" src="images/chattext.png">
+			<img alt="chat bubble to open chat window and start chatting with Aequos" class="chatbubble lozad" onclick="openChat()" src="images/chatbubble.png">
+			<img alt="X that closes the text inviting to chat above chatbubble image" class="lozad closeChat" src="images/closeChat.png">
 	</div>
-		<iframe title="Aequos chatbot" class="bot" src="https://snatchbot.me/webchat/?botID=55830&appID=GbE9uekoYZJoUSEjN0ac"></iframe>
+		<iframe title="Aequos chatbot" class="bot lozad" src="https://snatchbot.me/webchat/?botID=55830&appID=GbE9uekoYZJoUSEjN0ac"></iframe>
 		<p aria-label="Close chat" role="button" class="close" onclick="closeChatX()"> X</p>
 
 		<section id="aboutUsVideo">
@@ -187,22 +145,22 @@ ga('send', 'pageview'); -->
 
 		<section id="aboutUsIconsSection">
 			<div class="aboutUsIcons">
-				<img alt="specialist industry insight icon" class="aboutIcons" src="images/specialist.png">
+				<img alt="specialist industry insight icon" class="aboutIcons lozad" src="images/specialist.png">
 				<h3>SPECIALIST</h3>
 				<p>Our specialist industry insight and proven models fast-track business success</p>
 			</div>
 			<div class="aboutUsIcons">
-				<img alt="painless transition to SD-WAN technologies icon" class="aboutIcons" src="images/painless.png">
+				<img alt="painless transition to SD-WAN technologies icon" class="aboutIcons lozad" src="images/painless.png">
 				<h3>PAINLESS</h3>
 				<p>We make the transition to SD-WAN technologies seamless and effective.</p>
 			</div>
 			<div class="aboutUsIcons">
-				<img alt="innovative next generation network icon" class="aboutIcons" src="images/innovative.png">
+				<img alt="innovative next generation network icon" class="aboutIcons lozad" src="images/innovative.png">
 				<h3>INNOVATIVE</h3>
 				<p>Our nextgen SD-WAN provide a solid foundation for innovation and growth.</p>
 			</div>
 			<div class="aboutUsIcons">
-				<img alt="bespoke right-sized business network icon" class="aboutIcons" src="images/bespoke.png">
+				<img alt="bespoke right-sized business network icon" class="aboutIcons lozad" src="images/bespoke.png">
 				<h3>BESPOKE</h3>			
 				<p>We focus on making sure you deploy the right-sized SD-WAN for your business. </p>
 			</div>
@@ -215,11 +173,11 @@ ga('send', 'pageview'); -->
 			<div>
 				<h2>A FEW OF THE PARTNERS WE WORK WITH </h2>
 				<div class="clientLogos">
-					<img alt="Oxfam logo" id="oxfamLogo" src="images/oxfamLogo.png">
-					<img alt="Motorpoint logo"  id="motorLogo" src="images/motorLogo.png">
-					<img alt="Abbeyfield logo"  id="abbeyLogo" src="images/abbeyLogo.png">
-					<img alt="Safestore logo"  id="safestoreLogo" src="images/safestoreLogo.png">
-					<img alt="Pizzahut logo"  id="pizzahutLogo" src="images/pizzalogo.png">
+					<img class="lozad" alt="Oxfam logo" id="oxfamLogo" src="images/oxfamLogo.png">
+					<img class="lozad" alt="Motorpoint logo"  id="motorLogo" src="images/motorLogo.png">
+					<img class="lozad" alt="Abbeyfield logo"  id="abbeyLogo" src="images/abbeyLogo.png">
+					<img class="lozad" alt="Safestore logo"  id="safestoreLogo" src="images/safestoreLogo.png">
+					<img class="lozad" alt="Pizzahut logo"  id="pizzahutLogo" src="images/pizzalogo.png">
 				</div>
 				
 			</div>
@@ -239,7 +197,7 @@ ga('send', 'pageview'); -->
 										The Future Works,
 										2 Brunel Way, Slough, Berkshire,
 										SL1 1FQ</p>
-										<img class="small_qualif" src="images/Cyber_Essentials_Badge_High_Res.png" alt="Cyber Essentials Badge" title="Cyber_Essentials_Badge"/>
+										<img class="lozad small_qualif" src="images/Cyber_Essentials_Badge_High_Res.png" alt="Cyber Essentials Badge" title="Cyber_Essentials_Badge"/>
 									</div>
 									<div class="cInfoSection emails">
 										<h3>CALL US AT</h3>
@@ -255,8 +213,8 @@ ga('send', 'pageview'); -->
 									</div>
 									<div class="cInfoSection social">
 										<h3>SOCIAL</h3>
-											<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" id="linkedinBlack" src="images/social/black/linkedin.png" ></a>
-											<a rel="noopener" href="https://twitter.com/Aequossdwan" target="_blank"><img alt="Aequos SD-WAN Twitter" id="twitterBlack" src="images/social/black/twitter.png"></a>
+											<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" class="lozad" id="linkedinBlack" src="images/social/black/linkedin.png" ></a>
+											<a rel="noopener" href="https://twitter.com/Aequossdwan" target="_blank"><img alt="Aequos SD-WAN Twitter" class="lozad" id="twitterBlack" src="images/social/black/twitter.png"></a>
 									</div>
 			</div>
 		</section>
