added leadforensics tag plus htaccess changed

--- a/services.html
+++ b/services.html
@@ -17,6 +17,7 @@
 <meta name="theme-color" content="black">
 <meta name="description" content="AEQUOS offers three levels of services that revolutionise the bandwidth usage, IT infrastructure, scoping and design enhanced by service monitoring and security implementations" />
 <title>AEQUOS - SERVICES</title>
+<link rel="canonical" href="https://aequos.co.uk/services.html" />
 <!-- <link rel="stylesheet" href="css/style.css"> -->
 <link rel="stylesheet" href="css/min-style.css">
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
@@ -25,6 +26,8 @@
       type="image/x-icon" 
 			href="favicon.ico"> 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
+<script type="text/javascript" src="https://secure.leadforensics.com/js/156834.js"></script>
+<noscript><img src="https://secure.leadforensics.com/156834.png" alt="" style="display:none;" /></noscript>
 	 <script type="application/ld+json">
 	{
 	  "@context": "http://schema.org",
