--- a/about_us.html
+++ b/about_us.html
@@ -16,12 +16,14 @@
 <meta name="theme-color" content="black">
 <meta name="description" content="AEQUOS are leaders implementing the SD-WAN technology that enables companies of all sizes and across all sectors to exploit digital transformation. AEQUOS is a forward-thinking company that works closely with customers and partners delivering the latest of technology solutions with networking expertise and an innovative approach." />
 <title>AEQUOS - ABOUT US</title>
+<link rel="canonical" href="https://aequos.co.uk/about_us.html" />
 <link rel="stylesheet" href="css/min-style.css">
 <!-- <link rel="stylesheet" href="css/style.css"> -->
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
+<script type="text/javascript" src="https://secure.leadforensics.com/js/156834.js"></script>
+<noscript><img src="https://secure.leadforensics.com/156834.png" alt="" style="display:none;" /></noscript>
 <link rel="shortcut icon" 
       type="image/x-icon" 
 			href="favicon.ico"> 
