--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 		type="image/x-icon" 
 		href="favicon.ico" sizes="16x16"> 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
+<script type="text/javascript" src="https://secure.leadforensics.com/js/156834.js"></script>
+<noscript><img src="https://secure.leadforensics.com/156834.png" alt="" style="display:none;" /></noscript>
 <script type="application/ld+json">
 	{
 	  "@context": "http://schema.org",
