--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -16,11 +16,14 @@
 <meta name="theme-color" content="black">
 <meta name="description" content="AEQUOS is the UK's Leading Software-Defined Wide Area Network Provider. For the better user experience AEQUOS has implemented the use of cookies with a set of rules and policy to ensure that the data collected is fairly used." />
 <title>AEQUOS - PRIVACY POLICY</title>
+<link rel="canonical" href="https://aequos.co.uk/privacy-policy.html" />
 <!-- <link rel="stylesheet" href="css/style.css"> -->
 <link rel="stylesheet" href="css/min-style.css">
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
+<script type="text/javascript" src="https://secure.leadforensics.com/js/156834.js"></script>
+<noscript><img src="https://secure.leadforensics.com/156834.png" alt="" style="display:none;" /></noscript>
 <link rel="shortcut icon" 
       type="image/x-icon" 
 			href="favicon.ico"> 
