changed title for NEWS page

--- a/news.html
+++ b/news.html
@@ -15,7 +15,7 @@
 <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="black">
 <meta name="description" content="AEQUOS is the UK's Leading Software-Defined Wide Area Network Provider who aim to distribute the expert knowledge they have including their latest findings and information." />
-<title>AEQUOS - ABOUT US</title>
+<title>AEQUOS - NEWS</title>
 <link rel="canonical" href="https://aequos.co.uk/news.html" />
 <!-- <link rel="stylesheet" href="css/style.css"> -->
 <link rel="stylesheet" href="css/min-style.css">
