json-ld corrected

--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -27,7 +27,7 @@
 <link rel="shortcut icon" 
       type="image/x-icon" 
 			href="favicon.ico"> 
-	 <script type="application/ld+json">
+<script type="application/ld+json">
 	{
 	  "@context": "http://schema.org",
 	  "@type": "Organization",
@@ -43,25 +43,25 @@
 			"@type": "Person",
 			"name": "Andy Weedon"
 		} ],
-		"contactPoint": {
-		"@type": "Contact",
-		"telephone": "0345 646 6060",
-		"email": "mailto:info@aequos.co.uk",
 		"address": {
-    	"@type": "PostalAddress",
-    	"addressLocality": "Leicestershire",
-    	"addressRegion": "Loughborough",
-    	"postalCode":"LE11 3QF",
-    	"streetAddress": "Advanced Technology Innovation Centre	Loughborough University Science and Enterprise Park 5 Oakwood Drive"
-  	},
-		"contactType": "General Enquiries",
+			"@type": "PostalAddress",
+			"addressLocality": "Leicestershire",
+			"addressRegion": "Loughborough",
+			"postalCode":"LE11 3QF",
+			"streetAddress": "Advanced Technology Innovation Centre	Loughborough University Science and Enterprise Park 5 Oakwood Drive"
+		  },
+	  "contactPoint": [
+	  {
+		"@type": "ContactPoint",
+		"telephone": "+44345 646 6060",
+		"email": "mailto:info@aequos.co.uk",
+		"contactType": "Customer Service",
 		"areaServed" : "UK",
 		"sameAs" : [ "https://www.linkedin.com/company/aequos-sd-wan/",
     "https://twitter.com/Aequossdwan"]
-	  }
+	  }]
 	}
-	</script>
-
+</script>
 </head>
 <body>
 	<header class="header">
