--- a/contact-us.html
+++ b/contact-us.html
@@ -29,9 +29,9 @@
 			href="favicon.ico"> 
 <script type="application/ld+json">
 	{
-	  "@context": "http://schema.org",
-	  "@type": "Organization",
-	  "url": "http://aequos.co.uk",
+		"@context": "http://schema.org",
+		"@type": "Organization",
+		"url": "http://aequos.co.uk",
 		"name": "Aequos",
 		"description": "Aequos is a company that provides networking solutions to organisations of all sizes",
 		"founders": [
@@ -43,22 +43,23 @@
 			"@type": "Person",
 			"name": "Andy Weedon"
 		} ],
-	  "contactPoint": {
-		"@type": "Contact",
-		"telephone": "0345 646 6060",
-		"email": "mailto:info@aequos.co.uk",
 		"address": {
-    	"@type": "PostalAddress",
-    	"addressLocality": "Leicestershire",
-    	"addressRegion": "Loughborough",
-    	"postalCode":"LE11 3QF",
-    	"streetAddress": "Advanced Technology Innovation Centre	Loughborough University Science and Enterprise Park 5 Oakwood Drive"
-  	},
-		"contactType": "General Enquiries",
+			"@type": "PostalAddress",
+			"addressLocality": "Leicestershire",
+			"addressRegion": "Loughborough",
+			"postalCode":"LE11 3QF",
+			"streetAddress": "Advanced Technology Innovation Centre	Loughborough University Science and Enterprise Park 5 Oakwood Drive"
+			},
+		"contactPoint": [
+		{
+		"@type": "ContactPoint",
+		"telephone": "+44345 646 6060",
+		"email": "mailto:info@aequos.co.uk",
+		"contactType": "Customer Service",
 		"areaServed" : "UK",
 		"sameAs" : [ "https://www.linkedin.com/company/aequos-sd-wan/",
-    "https://twitter.com/Aequossdwan"]
-	  }
+		"https://twitter.com/Aequossdwan"]
+		}]
 	}
 </script>
 </head>
