--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
 <script type="text/javascript" src="https://secure.leadforensics.com/js/156834.js"></script>
 <noscript><img src="https://secure.leadforensics.com/156834.png" alt="" style="display:none;" /></noscript>
-	 <script type="application/ld+json">
+<script type="application/ld+json">
 	{
 	  "@context": "http://schema.org",
 	  "@type": "Organization",
@@ -44,24 +44,25 @@
 			"@type": "Person",
 			"name": "Andy Weedon"
 		} ],
-		"contactPoint": {
-		"@type": "Contact",
-		"telephone": "0345 646 6060",
-		"email": "mailto:info@aequos.co.uk",
 		"address": {
-    	"@type": "PostalAddress",
-    	"addressLocality": "Leicestershire",
-    	"addressRegion": "Loughborough",
-    	"postalCode":"LE11 3QF",
-    	"streetAddress": "Advanced Technology Innovation Centre	Loughborough University Science and Enterprise Park 5 Oakwood Drive"
-  	},
-		"contactType": "General Enquiries",
+			"@type": "PostalAddress",
+			"addressLocality": "Leicestershire",
+			"addressRegion": "Loughborough",
+			"postalCode":"LE11 3QF",
+			"streetAddress": "Advanced Technology Innovation Centre	Loughborough University Science and Enterprise Park 5 Oakwood Drive"
+		  },
+	  "contactPoint": [
+	  {
+		"@type": "ContactPoint",
+		"telephone": "+44345 646 6060",
+		"email": "mailto:info@aequos.co.uk",
+		"contactType": "Customer Service",
 		"areaServed" : "UK",
 		"sameAs" : [ "https://www.linkedin.com/company/aequos-sd-wan/",
     "https://twitter.com/Aequossdwan"]
-	  }
+	  }]
 	}
-	</script>
+</script>
 
 </head>
 <body>
